History of this buildout
========================

6.0.0 (unreleased)
------------------

- Fixed caching configs to point to pr-3/4 instead of pr-1/2.  [maurits]

- Let ontwikkel.cfg extend productie.cfg.  We used to extend
  devel.cfg, but we do not want to do development there, and do not
  want to extend nodejs.cfg as this does not work on the servers.
  [maurits]

- Also recatalog FileAttachment to fix getIcon metadata. [jladage]

- Use fresh Products.SimpleAttachment 5.0.0.  [maurits]

- Add class lead to tinymce styles menu. MINA-116  [jladage]

- Disabled link integrity checking at the beginning of the migration.
  Re-enabled it at the end.  [maurits]

- Readd Hearing to Theme allowed_content_types, otherwise migration
  fails. [jladage]

- Add MAILCHIMP_API_KEY. [jladage]

- Forms quickedit styling.  MINA-106  [lhuiskes]

- Removed Hearings from most code: view registrations, conditions,
  properties, permissions, tests.  We do keep the class, but you can
  no longer add a Hearing.  MINA-99.  [maurits]

- Added upgrade step to migrate Hearings to MREvents.  MINA-99.  [maurits]

- Set digibib title inside the white background.  MINA-113.
- Digibib Download link to red inside red framework. MINA-114.
  [lhuiskes]

- Set text/html as first option in body richwidget of theme.
  [jladage]

- Less padding on editbar. [jladage]

- Made Hearing use the views and macros from MREvent.  Moved the
  Hearing tests to the MREvent tests.  Part of MINA-99.  [maurits]

- Event registration is now anonymous.  Added migration.  MINA-103.
  [maurits]

- Set correct twitter id's.  [lhuiskes]

- Call Masonry twice to be sure it succeeds.  Made sure the js/main.js
  is only used in the click model and the static/main.js, which
  contains all 'grunted' javascript, is loaded via the javascript
  registry.  Note: you must run the 'Apply extra product profiles'
  upgrade step again.  [lennard, maurits]

- Show agenda and attendees only for future meetings, which includes