@@ -13,10 +13,10 @@ parts =
     instance
     munin
     test
-    varnish-conf
-    pcre
     varnish-build
-    varnish
+    varnish-secret
+    varnish-configuration
+    varnishd
     supervisor
     env
     chown
@@ -73,13 +73,25 @@ command = chmod 700 ${buildout:directory}/var/blobstorage
 # Ports
 instance = 8080
 varnish = 12080
+varnish_telnet = 12082
+varnish_next = ${:instance}
 
 # Blob storage via NFS:
 blob_storage = ${buildout:directory}/var/blobstorage
 
-# Sizes
+# Number of items in zeoclient memory per thread.
+zodb-cache-size = 40000
+# Varnish sparse file size
 varnish-cache-size = 256M
-memmonlimit = 1750MB
+
+project = minaraad
+release = base
+ramlocation = /dev/shm
+# We need this for varnish and munin path & stats naming
+projectrelease = ${:project}-${:release}
+
+# var directory
+var = ${buildout:directory}/var
 
 # Schedules.  Make specific in other cfg files.
 restart-time = 30 23 * * 0
@@ -123,7 +135,6 @@ PTS_LANGUAGES=nl
 zope_i18n_allowed_languages=nl
 zope_i18n_compile_mo_files=true
 
-
 [instance]
 recipe = plone.recipe.zope2instance
 zeo-client = false
@@ -132,9 +143,7 @@ http-address = ${conf:instance}
 debug-mode = ${conf:debug}
 verbose-security = ${conf:debug}
 zserver-threads = 3
-# XXX Check these new options:
-#zodb-cache-size = \${conf:zodb-cache-size}
-#zodb-cache-size-bytes = \${conf:zodb-cache-size-bytes}
+zodb-cache-size = ${conf:zodb-cache-size}
 # For the blob options, see also relstorage.cfg.
 blob-storage = ${conf:blob_storage}
 shared-blob = on
@@ -184,7 +193,6 @@ zcml =
 locales = ${buildout:directory}/locales
 products =
 
-
 [debugclient]
 <= instance
 # eggs += does not work here
@@ -195,7 +203,6 @@ eggs =
 # standard production client.
 zope-conf-additional =
 
-
 [munin]
 # Will be used to monitor the instance.
 recipe = zc.recipe.egg
@@ -203,80 +210,83 @@ eggs = munin.zope
 password = secret
 arguments = http_address='${conf:instance}', user='munin:${:password}'
 
-
-[varnish-conf]
-recipe = collective.recipe.template[genshi]:genshi
-input = templates/varnish.vcl.in
-output = ${buildout:parts-directory}/conf/varnish.vcl
-
-
-[pcre]
-recipe = hexagonit.recipe.cmmi
-url = http://downloads.sourceforge.net/project/pcre/pcre/8.12/pcre-8.12.tar.gz
-
 [lxml]
 recipe = z3c.recipe.staticlxml
 egg = lxml
 
+[varnish-secret]
+recipe = plone.recipe.command
+command =
+    dd if=/dev/random of=${conf:var}/varnish_secret count=1
+    chmod 600 ${conf:var}/varnish_secret
+
+[varnish-clearcache]
+recipe = collective.recipe.template
+input = inline:
+    #!/bin/bash
+    ${varnish:location}/bin/varnishadm -T 127.0.0.1:${conf:varnish_telnet} -S ${conf:var}/varnish_secret "ban req.url ~ ."
+    echo "sent ban req.url ~ . command to varnish"
+output = ${buildout:directory}/bin/varnish-clearcache
+mode = 755
 
 [varnish-build]
-recipe = hexagonit.recipe.cmmi
-url = ${versions:varnish-url}
-configure-options =
-    PCRE_CFLAGS=-I${buildout:directory}/parts/pcre/include
-    PCRE_LIBS="-L${buildout:directory}/parts/pcre/lib -lpcre"
+recipe = plone.recipe.varnish:build
 
+[varnish-configuration]
+recipe = plone.recipe.varnish:configuration
+backends = 127.0.0.1:${conf:varnish_next}
 
-[varnish]
-recipe = plone.recipe.varnish
-daemon = ${buildout:parts-directory}/varnish-build/sbin/varnishd
-config = ${buildout:parts-directory}/conf/varnish.vcl
+[varnishd]
+recipe = plone.recipe.varnish:script
 bind = ${conf:varnish_host}:${conf:varnish}
 cache-size = ${conf:varnish-cache-size}
 mode = foreground
+name = ${conf:ramlocation}/${vars:safeprojectrelease}-varnish
 
+[vars]
+recipe = mr.scripty
+# escape icky characters so we can use this in munin perlvars and/or filenames
+safeprojectrelease =
+    pr = self.buildout['conf']['projectrelease']
+    return pr.lower().replace(".","X").replace("-","X").replace('_','X').replace('/','X')
 
 [supervisor]
 recipe = collective.recipe.supervisor
-file = ${buildout:directory}/var/supervisor.sock
+file = ${conf:var}/supervisord.sock
+logfile = ${conf:var}/log/supervisord.log
+pidfile = ${conf:var}/supervisord.pid
 http-socket = unix
-plugins = superlance
+logfile-maxbytes = 5MB
+logfile-backups = 5
+supervisord-environment = PYTHONUNBUFFERED=true
 programs =
-      10 instance ${buildout:bin-directory}/instance [console]
-      30 varnish (exitcodes=0) ${buildout:directory}/bin/varnish [-p cli_timeout=10]
-eventlisteners =
-#      memmon TICK_60 ${buildout:bin-directory}/memmon [-p instance=${conf:memmonlimit} -s "python ${buildout:directory}/scripts/sendmail.py" -m m.van.rees@zestsoftware.nl]
-
+    10 instance (startsecs=10 stderr_logfile=NONE stdout_logfile=${conf:var}/log/instance.log) ${buildout:directory}/bin/instance [console] true
+    20 varnish (startsecs=10 stderr_logfile=NONE stdout_logfile=${conf:var}/log/varnish-stdout.log) ${buildout:directory}/bin/varnishd true
 
 [crontab-start]
 recipe = z3c.recipe.usercrontab
 times = @reboot
 command = ${buildout:directory}/bin/supervisord
 
-
 [crontab-restart]
 recipe = z3c.recipe.usercrontab
 times = ${conf:restart-time}
 command = ${buildout:directory}/bin/supervisorctl restart instance
-
 
 [crontab-pack]
 recipe = z3c.recipe.usercrontab
 times = ${conf:pack-time}
 command = ${buildout:directory}/bin/zodbpack --days=1 ${buildout:directory}/parts/conf/zodbpack.cfg
 
-
 [crontab-projects-reminder]
 recipe = z3c.recipe.usercrontab
 times = ${conf:projects-reminder-time}
 command = ${buildout:directory}/scripts/cron_projects_reminder.py
 
-
 [crontab-cleanup-pas]
 recipe = z3c.recipe.usercrontab
 times = ${conf:cleanup-pas-time}
 command = ${buildout:directory}/bin/instance run ${buildout:directory}/scripts/cleanup_pas.py
-
 
 [logrotate.conf]
 recipe = zc.recipe.deployment:configuration
