@@ -24,13 +24,15 @@ hexagonit.recipe.cmmi = 2.0
 hexagonit.recipe.download = 1.7
 jquery.pyproxy = 0.5
 meld3 = 0.6.10
-munin.zope = 1.3.3
+mr.scripty = 1.0b3
+munin.varnish = 1.0a3
+munin.zope = 2.1
 Pillow = 3.0.0
 plone.api = 1.4.11
 plone.app.imagecropping = 1.3
 plone.app.themingplugins = 1.0
 plone.recipe.command = 1.1
-plone.recipe.varnish = 1.2.2
+plone.recipe.varnish = 2.0a4.dev0
 postmonkey = 1.0b
 Products.DataGridField = 1.9.4
 Products.DCWorkflowGraph = 0.4.1
